06-kubernetes/kubernetes_practicals/configmap-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-cm
spec:
  containers:
    - name: nginx
      image: busybox
      command: ["sh", "-c", "echo APP_ENV=$APP_ENV && echo APP_PORT=$APP_PORT && sleep 3600"]
