06-kubernetes/kubernetes_practicals/daemonset-example.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-logger
spec:
  selector:
    matchLabels:
      name: logger
  template:
    metadata:
      labels:
        name: logger
    spec:
      containers:
        - name: log-agent
          image: busybox
          command: ["sh", "-c", "while true; do echo Logging from node $(hostname); sleep 60; done"]
