06-kubernetes/kubernetes_practicals/labels-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
    env: prod
spec:
  containers:
    - name: mycontainer
      image: nginx
