06-kubernetes/kubernetes_practicals/probe-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: probe-app
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 3
