06-kubernetes/kubernetes_practicals/secret-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-secret-demo
spec:
  containers:
    - name: secret-app
      image: busybox
      command: ["sh", "-c", "echo USER=$USERNAME && echo PASS=$PASSWORD && sleep 3600"]
