06-kubernetes/kubernetes_practicals/service-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: svc-app
  labels:
    app: svc-app
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: svc-service
spec:
  type: NodePort
  selector:
    app: svc-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
